adicionado favicons, novas imagens para o game, configuração de animaçoes CSS e ciaçao funcionalidades JS

--- a/index.html
+++ b/index.html
@@ -5,18 +5,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon_io/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon_io/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon_io/favicon-16x16.png">
+  <link rel="manifest" href="./images/favicon_io/site.webmanifest">
   <link rel="stylesheet" href="./css/style.css">
-  <script src="./js/script.js"></script>
   <title>Save Konoha</title>
 </head>
 
 <body>
   <div class="game">
     <img src="./images/floor.jpg" alt="floor" class="floor">
-    <img src="./images/naruto.gif" alt="naruto" class="naruto">
     <img src="./images/three-clouds-akatsuki.png" alt="clouds" class="cloud1">
     <img src="./images/cloud-akatsuki.png" alt="cloud" class="cloud2">
+    <img src="./images/enemy1.png" alt="enemy" class="enemy">
+    <img src="./images/naruto.gif" alt="naruto" class="naruto">
   </div>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
