adiçao de modal game-over com banner e button, criado funçao para reset pagina após game over e funcionalidades do modal

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <img src="./images/enemy1.png" alt="enemy" class="enemy">
     <img src="./images/naruto.gif" alt="naruto" class="naruto">
   </div>
+
+  <div class="banner banner-none">
+    <img src="./images/game-over-banner.png" alt="game over" class="banner-game-over">
+    <button id="refresh" class="btn">Restart</button>
+  </div>
   <script src="./js/script.js"></script>
 </body>
 
